Fetch active tasks from memory in SeekableStreamSupervisor (#16098)
SeekableStreamSupervisor fetches the payloads of every active task in its datasource
twice in every RunNotice. In large clusters, this may cause the RunNotice to take a long
time to finish.
This patch can help reduce the load on the DB significantly by fetching these payloads from memory.

Co-authored-by: Kashif Faraz <kashif.faraz@gmail.com>
Co-authored-by: cryptoe <karankumar1100@gmail.com>